# treering

./: .gitignore  CMakeLists.txt  README.md
doc/: NOTES.md
include/: agent.hpp  entity.hpp  tree.hpp
src/: main.cpp
test/: CMakeLists.txt  agent_test.cpp  entity_test.cpp  span_test.cpp  tree_test.cpp
